fix nowrap

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   padding: 6rem;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: row;
   align-items: center;
   background-color: #a8ffa8;
